--- a/examples/compose/single-container.yml
+++ b/examples/compose/single-container.yml
@@ -7,11 +7,12 @@ services:
       - AMBARI_DDL_URL=${AMBARI_DDL_URL}
     image: hdp/postgres
     networks:
-     - dev
+     dev:
+      aliases:
+        - postgres
     environment:
      - AMBARI_DDL_URL=${AMBARI_DDL_URL}
-    hostname: postgres
-    domainname: dev
+    network_mode: bridge
   ambari-server.dev:
     build: 
       context: ../../containers/ambari-server
@@ -19,9 +20,10 @@ services:
        - AMBARI_REPO_URL=${AMBARI_REPO_URL}
     image: hdp/ambari-server
     networks:
-     - dev
-    hostname: ambari-server
-    domainname: dev
+     dev:
+      aliases:
+        - ambari-server 
+    network_mode: bridge
     ports:
      - "8080:8080"
      - "8440:8440"
@@ -34,9 +36,10 @@ services:
     image: hdp/node
     privileged: true
     networks:
-     - dev
-    hostname: dn0
-    domainname: dev
+    dev:
+      aliases:
+        - dn0 
+    network_mode: bridge
     ports:
      # ZooKeeper
      - "2181:2181"
