--- a/compose/multi-container.yml
+++ b/compose/multi-container.yml
@@ -7,24 +7,17 @@ services:
       - AMBARI_DDL_URL=${AMBARI_DDL_URL}
     image: hdp/postgres
     networks:
-     dev:
-       aliases:
-          - postgres
+     - dev
     hostname: postgres
     domainname: dev
-    ports:
-      - "5432:5432"  
-    
   ambari-server.dev:
     build: 
       context: ../../containers/ambari-server
       args:
        - AMBARI_REPO_URL=${AMBARI_REPO_URL}
     image: hdp/ambari-server
-   networks:
-     dev:
-      aliases:
-        - ambari-server 
+    networks:
+     - dev
     hostname: ambari-server
     domainname: dev
     ports:
@@ -35,12 +28,10 @@ services:
       args:
        - AMBARI_REPO_URL=${AMBARI_REPO_URL}
        - HDP_REPO_URL=${HDP_REPO_URL}
-    image: hdp/node
+    image: hdp/master
     privileged: true
     networks:
-      dev:
-       aliases:
-         - master0
+     - dev
     hostname: master0
     domainname: dev
     ports:
@@ -66,6 +57,7 @@ services:
      - "9999:9999"
      - "9933:9933"
      - "10015:10015"
+     - "10016:10016"
      # HBase
      - "16000:16000"
      - "16010:16010"
@@ -88,73 +80,48 @@ services:
      - "9995:9995"
      # Kerberos
      #- "88:88"
+     #Spark
+     - "4040:4040"
+     - "18080:18080"
+     - "18081:18081"
+     # Yarn
+     - "45455:45454"
+     - "8042:8042"
   dn0.dev:
     build:
       context: ../../containers/node
       args:
        - AMBARI_REPO_URL=${AMBARI_REPO_URL}
        - HDP_REPO_URL=${HDP_REPO_URL}
-    image: hdp/node
+    image: hdp/worker
     privileged: true
     networks:
-      dev:
-        aliases:
-          - dn0
+     - dev
     hostname: dn0
     domainname: dev
-    ports:
-     # HDFS
-     - "50070:50070"
-     - "50470:50470"
-     - "50075:50075"
-     - "50475:50475"
-     - "50010:50010"
-     - "50020:50020"
-     - "50030:50030"
-     # HBase
-     - "16020:16020"
-     - "16030:16030"
-     # Yarn
-     - "45455:45454"
-     - "8042:8042"
-     # Solr
-     - "8983:8983"
-     # Kafka
-     - "6667:6667"
   dn1.dev:
     build:
       context: ../../containers/node
       args:
        - AMBARI_REPO_URL=${AMBARI_REPO_URL}
        - HDP_REPO_URL=${HDP_REPO_URL}
-    image: hdp/node
+    image: hdp/worker
     privileged: true
     networks:
-      dev:
-        aliases:
-          - dn1
+     - dev
     hostname: dn1
     domainname: dev
- ports:
-     # HDFS
-     - "50071:50070"
-     - "50472:50470"
-     - "50076:50075"
-     - "50476:50475"
-     - "50011:50010"
-     - "50021:50020"
-     - "50031:50030"
+#    ports:
      # HBase
-     - "16021:16020"
-     - "16031:16030"
+#     - "16020:16020"
+#     - "16030:16030"
      # Yarn
-     - "45455:45454"
-     - "8043:8042"
+#     - "45455:45454"
+#     - "8042:8042"
      # Solr
-     - "8984:8983"
+#     - "8983:8983"
      # Kafka
-     - "6668:6667"
-
+#     - "6667:6667"
 networks:
   dev:
     driver: bridge
