--- a/compose/single-container.yml
+++ b/compose/single-container.yml
@@ -27,7 +27,7 @@ services:
                 - postgres
     depends_on:
       - repo_cache.dev
-    command: ["../env/wait-for-it.sh", "repo_cache.dev:80"]
+    command: ["/wait-for-it.sh", "repo_cache.dev:80"]
   #  ambari-server.dev:
   #   build: 
   #     context: ../containers/ambari-server
