--- a/containers/postgres/Dockerfile
+++ b/containers/postgres/Dockerfile
@@ -1,11 +1,9 @@
 FROM postgres
-RUN apt-get update -y
-RUN apt-get install -y wget
+RUN apt-get update -y && \
+ apt-get install -y wget
 ARG AMBARI_DDL_URL
 ADD pg_hba.conf /pg_hba.conf
 ADD scripts/* /docker-entrypoint-initdb.d/
 RUN mkdir /home/postgres
 RUN chown postgres /pg_hba.conf /home/postgres
 RUN chown postgres /var/lib/postgresql/data
-ADD ./scripts/wait-for-it.sh /wait-for-it.sh
-RUN chmod +x /wait-for-it.sh
