--- a/containers/node/Dockerfile
+++ b/containers/node/Dockerfile
@@ -1,9 +1,11 @@
-FROM centos:7
+FROM centos:${OS_VER}
 ARG AMBARI_REPO_URL
 ARG HDP_REPO_URL
+
 RUN yum install -y sudo wget openssl-devel postgresql-jdbc mysql-connector-java unzip
 RUN wget -nv ${AMBARI_REPO_URL} -O /etc/yum.repos.d/ambari.repo
 RUN wget -nv ${HDP_REPO_URL} -O /etc/yum.repos.d/hdp.repo
+
 # Uncomment if you want to run kerberos in container
 # RUN yum install -y krb5-server krb5-libs krb5-workstation
 RUN yum install -y ambari-agent
@@ -27,6 +29,5 @@ RUN yum install -y smartsense*
 RUN yum install -y druid*
 RUN yum install -y superset*
 RUN yum install -y lzo snappy-devel rpcbind
-RUN rm /etc/yum.repos.d/hdp*.repo
 ADD scripts/start.sh /start.sh
 CMD /start.sh
