--- a/compose/single-container.yml
+++ b/compose/single-container.yml
@@ -4,8 +4,8 @@ services:
       image: hdp/repo_cache
       hostname: repo_cache
       domainname: dev
-      ports:
-        - "8085:80"
+ #     ports:
+ #       - "8085:80"
       networks:
             dev:
               aliases:
