--- a/compose/single-container.yml
+++ b/compose/single-container.yml
@@ -29,20 +29,23 @@ services:
                 - postgres
     depends_on:
       - repo-cache.dev
-  #  ambari-server.dev:
-  #   build: 
-  #     context: ../containers/ambari-server
-  #     args:
-  #      - AMBARI_REPO_URL=${AMBARI_REPO_URL}
-  #   image: hdp/ambari-server
-  #   networks:
-  #       dev:
-  #           aliases:
-  #               - ambari-server
-  #   hostname: ambari-server
-  #   domainname: dev
-  #   ports:
-  #    - "8080:8080"
+   ambari-server.dev:
+    build: 
+      context: ../containers/ambari-server
+      args:
+       - AMBARI_REPO_URL=${AMBARI_REPO_URL}
+       - OS_VER=${OS_VER}
+    image: hdp/ambari-server
+    hostname: ambari-server
+    domainname: dev
+    ports:
+     - "8080:8080"
+    networks:
+        dev:
+            aliases:
+                - ambari-server
+    depends_on:
+      - repo-cache.dev
   # dn0.dev:
   #   build:
   #     context: ../containers/node
