--- a/compose/single-container.yml
+++ b/compose/single-container.yml
@@ -30,23 +30,23 @@ services:
     depends_on:
       - repo-cache.dev
 
-   ambari-server.dev:
-    build: 
-      context: ../containers/ambari-server
-      args:
-       - AMBARI_REPO_URL=${AMBARI_REPO_URL}
-       - OS_VER=${OS_VER}
-    image: hdp/ambari-server
-    hostname: ambari-server
-    domainname: dev
-    networks:
-        dev:
-            aliases:
-                - ambari-server
-    depends_on:
-      - repo-cache.dev
-    ports:
-     - "8080:8080"
+   # ambari-server.dev:
+   #  build: 
+   #    context: ../containers/ambari-server
+   #    args:
+   #     - AMBARI_REPO_URL=${AMBARI_REPO_URL}
+   #     - OS_VER=${OS_VER}
+   #  image: hdp/ambari-server
+   #  hostname: ambari-server
+   #  domainname: dev
+   #  networks:
+   #      dev:
+   #          aliases:
+   #              - ambari-server
+   #  depends_on:
+   #    - repo-cache.dev
+   #  ports:
+   #   - "8080:8080"
   # dn0.dev:
   #   build:
   #     context: ../containers/node
