--- a/containers/postgres/Dockerfile
+++ b/containers/postgres/Dockerfile
@@ -9,3 +9,4 @@ RUN chown postgres /pg_hba.conf /home/postgres
 RUN chown postgres /var/lib/postgresql/data
 ADD wait-for-it.sh /wait-for-it.sh
 RUN chmod +x /wait-for-it.sh
+RUN wget -nv ${AMBARI_DDL_URL} -O /Ambari-DDL-Postgres-CREATE.sql
