--- a/containers/ambari-server/Dockerfile
+++ b/containers/ambari-server/Dockerfile
@@ -1,11 +1,14 @@
 FROM centos:7
-ARG AMBARI_REPO_URL
-ARG HDP_REPO_URL
+ARG AMBARI_REPO_URL_BUILD
+ARG HDP_REPO_URL_BUILD
+
 RUN yum install -y wget sudo net-tools
+
+RUN wget -nv ${AMBARI_REPO_URL_BUILD} -O /etc/yum.repos.d/ambari.repo
+RUN wget -nv ${HDP_REPO_URL_BUILD} -O /etc/yum.repos.d/hdp.repo
+
 RUN yum install -y sudo wget openssl-devel postgresql-jdbc mysql-connector-java unzip
 
-RUN wget -nv ${AMBARI_REPO_URL} -O /etc/yum.repos.d/ambari.repo
-RUN wget -nv ${HDP_REPO_URL} -O /etc/yum.repos.d/hdp.repo
 
 RUN yum install -y ambari-server postgresql-jdbc
 RUN ambari-server setup --database=postgres --databasehost=postgres.dev --databaseport=5432 --databasename=ambari --postgresschema=ambari  --databaseusername=ambari --databasepassword=dev --silent
