--- a/compose/single-container.yml
+++ b/compose/single-container.yml
@@ -35,6 +35,9 @@ services:
         - AMBARI_REPO_URL_BUILD =${AMBARI_REPO_URL_BUILD}
         - HDP_REPO_URL_BUILD=${HDP_REPO_URL_BUILD}
     image: hdp/ambari-server
+    environment:
+        - AMBARI_REPO_URL_BUILD =${AMBARI_REPO_URL_BUILD}
+        - HDP_REPO_URL_BUILD=${HDP_REPO_URL_BUILD}
     hostname: ambari-server
     domainname: dev
     networks:
