--- a/compose/repo-cache.yml
+++ b/compose/repo-cache.yml
@@ -9,7 +9,7 @@ services:
           - AMBARI_VER=${AMBARI_VER}
           - HDP_UTILS_VER=${HDP_UTILS_VER}
           - AMBARI_STACK=${AMBARI_STACK}
-          - REPO_HOST_ADDRESS=${REPO_HOST_ADDRESS}
+          - REPO_HOST_ADDRESS_LOCAL=${REPO_HOST_ADDRESS_LOCAL}
         dockerfile: Dockerfile
       image: hdp/repo-cache
       hostname: repo-cache
