--- a/containers/repo-cache/Dockerfile
+++ b/containers/repo-cache/Dockerfile
@@ -5,7 +5,7 @@ ARG AMBARI_VER
 ARG HDP_VER
 ARG HDP_UTILS_VER
 ARG AMBARI_STACK
-ARG REPO_HOST_ADDRESS
+ARG REPO_HOST_ADDRESS_LOCAL
 
 RUN echo AMBARI_STACK=${AMBARI_STACK} && \
 echo HDP_VER=${HDP_VER}
@@ -36,7 +36,7 @@ WORKDIR /var/www/html/
 RUN echo \#VERSION_NUMBER=${AMBARI_VER} >> ambari.repo && \
 echo [ambari-${AMBARI_VER}] >> ambari.repo && \
 echo name=ambari Version - ambari-${AMBARI_VER} >> ambari.repo && \
-echo baseurl=$REPO_HOST_ADDRESS/ >> ambari.repo && \
+echo baseurl=$REPO_HOST_ADDRESS_LOCAL/ >> ambari.repo && \
 echo gpgcheck=0 >> ambari.repo && \
 echo enabled=1 >> ambari.repo && \ 
 echo priority=1 >> ambari.repo
@@ -46,7 +46,7 @@ echo priority=1 >> ambari.repo
 RUN echo \#VERSION_NUMBER=$HDP_VER >> hdp.repo  && \
 echo [HDP-$HDP_VER] >> hdp.repo  && \
 echo name=HDP Version - HDP-$HDP_VER >> hdp.repo  && \
-echo baseurl=$REPO_HOST_ADDRESS/ >> hdp.repo  && \
+echo baseurl=$REPO_HOST_ADDRESS_LOCAL/ >> hdp.repo  && \
 echo gpgcheck=0 >> hdp.repo  && \
 echo enabled=1 >> hdp.repo  && \
 echo priority=1 >> hdp.repo  && \
@@ -54,7 +54,7 @@ echo   >> hdp.repo  && \
 echo   >> hdp.repo  && \
 echo [HDP-UTILS-$HDP_UTILS_VER] >> hdp.repo  && \
 echo name=HDP-UTILS Version - HDP-UTILS-$HDP_UTILS_VER >> hdp.repo  && \
-echo baseurl=http:http://$REPO_HOST_ADDRESS/ >> hdp.repo  && \
+echo baseurl=http://$REPO_HOST_ADDRESS_LOCAL/ >> hdp.repo  && \
 echo gpgcheck=0 >> hdp.repo  && \
 echo enabled=1 >> hdp.repo  && \
 echo priority=1 >> hdp.repo
