--- a/containers/postgres/Dockerfile
+++ b/containers/postgres/Dockerfile
@@ -2,6 +2,7 @@ FROM postgres
 RUN apt-get update -y && \
  apt-get install -y wget curl
 ARG AMBARI_DDL_URL
+ARG AMBARI_VER
 ADD pg_hba.conf /pg_hba.conf
 ADD scripts/* /docker-entrypoint-initdb.d/
 RUN mkdir /home/postgres
@@ -9,5 +10,6 @@ RUN chown postgres /pg_hba.conf /home/postgres
 RUN chown postgres /var/lib/postgresql/data
 ADD wait-for-it.sh /wait-for-it.sh
 RUN chmod +x /wait-for-it.sh
-RUN wget -nv ${AMBARI_DDL_URL} -O /Ambari-DDL-Postgres-CREATE.sql && \
- sed -i "s/\${ambariSchemaVersion}/${AMBARI_VER:0:5}/g" /Ambari-DDL-Postgres-CREATE.sql
+RUN wget -nv ${AMBARI_DDL_URL} -O /Ambari-DDL-Postgres-CREATE.sql 
+WORKDIR /
+RUN sed -i "s/\${ambariSchemaVersion}/${AMBARI_VER:0:5}/g" /Ambari-DDL-Postgres-CREATE.sql
