--- a/containers/node/Dockerfile
+++ b/containers/node/Dockerfile
@@ -1,10 +1,10 @@
 FROM centos:7
-ARG AMBARI_REPO_URL
-ARG HDP_REPO_URL
+ARG AMBARI_REPO_URL_BUILD
+ARG HDP_REPO_URL_BUILD
 
 RUN yum install -y sudo wget openssl-devel postgresql-jdbc mysql-connector-java unzip
-RUN wget -nv ${AMBARI_REPO_URL} -O /etc/yum.repos.d/ambari.repo
-RUN wget -nv ${HDP_REPO_URL} -O /etc/yum.repos.d/hdp.repo
+RUN wget -nv ${AMBARI_REPO_URL_BUILD} -O /etc/yum.repos.d/ambari.repo
+RUN wget -nv ${AMBARI_REPO_URL_BUILD} -O /etc/yum.repos.d/hdp.repo
 
 ## Uncomment if you want to run kerberos in container
 ## RUN yum install -y krb5-server krb5-libs krb5-workstation
