--- a/compose/single-container.yml
+++ b/compose/single-container.yml
@@ -19,7 +19,7 @@ services:
       - AMBARI_VER=${AMBARI_VER}
     image: hdp/postgres
     environment:
-     - AMBARI_DDL_URL=${AMBARI_DDL_URL}
+      - AMBARI_DDL_URL=${AMBARI_DDL_URL}
       - AMBARI_VER=${AMBARI_VER}
     hostname: postgres
     domainname: dev
@@ -30,128 +30,128 @@ services:
     depends_on:
       - repo-cache.dev
 
-  ambari-server.dev:
-    build: 
-      context: ../containers/ambari-server
-      args:
-        - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
-        - HDP_REPO_URL_BUILD=${HDP_REPO_URL_BUILD}
-    image: hdp/ambari-server
-    environment:
-        - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
-        - HDP_REPO_URL_BUILD=${HDP_REPO_URL_BUILD}
-    hostname: ambari-server
-    domainname: dev
-    networks:
-        dev:
-            aliases:
-                - ambari-server
-    depends_on:
-      - repo-cache.dev
-    ports:
-     - "8080:8080"
-  master.dev:
-    build:
-      context: ../containers/node
-      args:
-        - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
-        - HDP_REPO_URL_BUILD=${HDP_REPO_URL_BUILD}
-    image: hdp/node
-    privileged: true
-    networks:
-        dev:
-            aliases:
-                - master
-    depends_on:
-      - repo-cache.dev
-    hostname: master
-    domainname: dev
-    ports:
-     # ZooKeeper
-     - "2181:2181"
-     # HDFS
-     - "8020:8020"
-     - "9000:9000"
-     - "50090:50090"
-     # YARN
-     - "8088:8088"
-     - "8050:8050"
-     - "8025:8025"
-     - "8030:8030"
-     - "8141:8141"
-     - "45454:45454"
-     - "10200:10200"
-     - "8188:8188"
-     - "8190:8190"
-     - "19888:19888"
-     # HiveServer2
-     - "10000:10000"
-     - "9999:9999"
-     - "9933:9933"
-     - "9083:9083"
-     - "10015:10015"
-     - "10016:10016"
-     # HBase
-     - "16000:16000"
-     - "16010:16010"
-     # Storm
-     - "8000:8000"
-     - "8744:8744"
-     # Oozie
-     - "11000:11000"
-     - "11443:11443"
-     # Knox
-     - "8443:8443"
-     # Ranger
-     - "6080:6080"
-     - "6182:6182"
-     - "6083:6083"
-     - "6183:6183"
-     # Grafana
-     - "3000:3000"
-     # Zeppelin
-     - "9995:9995"
-     # Kerberos
-     #- "88:88"
-     #Spark
-     - "4040:4040"
-     - "18080:18080"
-     - "18081:18081"
-     # Yarn
-     - "45455:45454"
-     - "8042:8042"
-  datanode0.dev:
-    build:
-      context: ../containers/node
-      args:
-        - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
-        - HDP_REPO_URL_BUILD=${HDP_REPO_URL_BUILD}
-    image: hdp/node
-    privileged: true
-    networks:
-        dev:
-            aliases:
-                - datanode0
-    depends_on:
-      - repo-cache.dev
-    hostname: datanode0
-    domainname: dev
-  datanode1.dev:
-    build:
-      context: ../containers/node
-      args:
-        - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
-        - HDP_REPO_URL_BUILD=${HDP_REPO_URL_BUILD}
-    image: hdp/node
-    privileged: true
-    networks:
-        dev:
-            aliases:
-                - datanode1
-    depends_on:
-      - repo-cache.dev
-    hostname: datanode1
-    domainname: dev
+  # ambari-server.dev:
+  #   build: 
+  #     context: ../containers/ambari-server
+  #     args:
+  #       - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
+  #       - HDP_REPO_URL_BUILD=${HDP_REPO_URL_BUILD}
+  #   image: hdp/ambari-server
+  #   environment:
+  #       - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
+  #       - HDP_REPO_URL_BUILD=${HDP_REPO_URL_BUILD}
+  #   hostname: ambari-server
+  #   domainname: dev
+  #   networks:
+  #       dev:
+  #           aliases:
+  #               - ambari-server
+  #   depends_on:
+  #     - repo-cache.dev
+  #   ports:
+  #    - "8080:8080"
+  # master.dev:
+  #   build:
+  #     context: ../containers/node
+  #     args:
+  #       - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
+  #       - HDP_REPO_URL_BUILD=${HDP_REPO_URL_BUILD}
+  #   image: hdp/node
+  #   privileged: true
+  #   networks:
+  #       dev:
+  #           aliases:
+  #               - master
+  #   depends_on:
+  #     - repo-cache.dev
+  #   hostname: master
+  #   domainname: dev
+  #   ports:
+  #    # ZooKeeper
+  #    - "2181:2181"
+  #    # HDFS
+  #    - "8020:8020"
+  #    - "9000:9000"
+  #    - "50090:50090"
+  #    # YARN
+  #    - "8088:8088"
+  #    - "8050:8050"
+  #    - "8025:8025"
+  #    - "8030:8030"
+  #    - "8141:8141"
+  #    - "45454:45454"
+  #    - "10200:10200"
+  #    - "8188:8188"
+  #    - "8190:8190"
+  #    - "19888:19888"
+  #    # HiveServer2
+  #    - "10000:10000"
+  #    - "9999:9999"
+  #    - "9933:9933"
+  #    - "9083:9083"
+  #    - "10015:10015"
+  #    - "10016:10016"
+  #    # HBase
+  #    - "16000:16000"
+  #    - "16010:16010"
+  #    # Storm
+  #    - "8000:8000"
+  #    - "8744:8744"
+  #    # Oozie
+  #    - "11000:11000"
+  #    - "11443:11443"
+  #    # Knox
+  #    - "8443:8443"
+  #    # Ranger
+  #    - "6080:6080"
+  #    - "6182:6182"
+  #    - "6083:6083"
+  #    - "6183:6183"
+  #    # Grafana
+  #    - "3000:3000"
+  #    # Zeppelin
+  #    - "9995:9995"
+  #    # Kerberos
+  #    #- "88:88"
+  #    #Spark
+  #    - "4040:4040"
+  #    - "18080:18080"
+  #    - "18081:18081"
+  #    # Yarn
+  #    - "45455:45454"
+  #    - "8042:8042"
+  # datanode0.dev:
+  #   build:
+  #     context: ../containers/node
+  #     args:
+  #       - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
+  #       - HDP_REPO_URL_BUILD=${HDP_REPO_URL_BUILD}
+  #   image: hdp/node
+  #   privileged: true
+  #   networks:
+  #       dev:
+  #           aliases:
+  #               - datanode0
+  #   depends_on:
+  #     - repo-cache.dev
+  #   hostname: datanode0
+  #   domainname: dev
+  # datanode1.dev:
+  #   build:
+  #     context: ../containers/node
+  #     args:
+  #       - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
+  #       - HDP_REPO_URL_BUILD=${HDP_REPO_URL_BUILD}
+  #   image: hdp/node
+  #   privileged: true
+  #   networks:
+  #       dev:
+  #           aliases:
+  #               - datanode1
+  #   depends_on:
+  #     - repo-cache.dev
+  #   hostname: datanode1
+  #   domainname: dev
 networks:
   dev:
     driver: bridge
