--- a/containers/node/Dockerfile
+++ b/containers/node/Dockerfile
@@ -1,10 +1,14 @@
 FROM centos:7
 ARG AMBARI_REPO_URL_BUILD
 ARG HDP_REPO_URL_BUILD
+ARG AMBARI_REPO_URL_RUN
+ARG HDP_REPO_URL_RUN
 
 RUN yum install -y sudo wget openssl-devel postgresql-jdbc mysql-connector-java unzip
-RUN wget -nv ${AMBARI_REPO_URL_BUILD} -O /etc/yum.repos.d/ambari.repo
-RUN wget -nv ${AMBARI_REPO_URL_BUILD} -O /etc/yum.repos.d/hdp.repo
+
+RUN wget -nv ${AMBARI_REPO_URL_BUILD} -O /etc/yum.repos.d/ambari_build.repo && \
+  wget -nv ${HDP_REPO_URL_BUILD} -O /etc/yum.repos.d/hdp_build.repo 
+
 
 ## Uncomment if you want to run kerberos in container
 ## RUN yum install -y krb5-server krb5-libs krb5-workstation
@@ -29,7 +33,13 @@ RUN yum install -y ambari-agent
 #RUN yum install -y druid*
 #RUN yum install -y superset*
 
-RUN rm -f /etc/yum.repos.d/hdp* 
+RUN rm -f /etc/yum.repos.d/ambari_build.repo && \
+ rm -f /etc/yum.repos.d/hdp_build.repo
+
 RUN yum install -y lzo snappy-devel rpcbind
+
+RUN wget -nv ${AMBARI_REPO_URL_RUN} -O /etc/yum.repos.d/ambari.repo && \
+  wget -nv ${HDP_REPO_URL_RUN} -O /etc/yum.repos.d/hdp.repo
+
 ADD scripts/start.sh /start.sh
 CMD /start.sh
