--- a/compose/repo-cache.yml
+++ b/compose/repo-cache.yml
@@ -9,18 +9,19 @@ services:
           - AMBARI_VER=${AMBARI_VER}
           - HDP_UTILS_VER=${HDP_UTILS_VER}
           - AMBARI_STACK=${AMBARI_STACK}
-          - REPO_HOST_ADDRESS_LOCAL=${REPO_HOST_ADDRESS_LOCAL}
+          - REPO_HOST_ADDRESS_GLOBAL=${REPO_HOST_ADDRESS_GLOBAL}
+          - REPO_HOST_ADDRESS=${REPO_HOST_ADDRESS}
         dockerfile: Dockerfile
       image: hdp/repo-cache
       hostname: repo-cache
       domainname: dev
-#       networks:
-#             dev:
-#               aliases:
-#                   - repo-cache
-#       ports:
-#        - "8085:80"
+      networks:
+            dev:
+              aliases:
+                  - repo-cache
+      ports:
+       - "8085:80"
 
-#networks:
-#  dev:
-#    driver: bridge
+networks:
+ dev:
+   driver: bridge
