--- a/compose/multy-container.yml
+++ b/compose/multy-container.yml
@@ -13,7 +13,7 @@ services:
   
   postgres.dev:
     build:
-#      context: .
+     context: .
 #     context: ../containers/postgres
      args:
       - AMBARI_DDL_URL=${AMBARI_DDL_URL}
@@ -35,7 +35,7 @@ services:
 
   ambari-server.dev:
     build: 
- #     context: ./
+      context: .
       #context: ../containers/ambari-server
       args:
         - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
@@ -62,7 +62,7 @@ services:
      - "8080:8080"
   master.dev:
     build:
- #     context: ./
+      context: .
 #      context: ../containers/node
       args:
         - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
@@ -136,7 +136,7 @@ services:
      - "8042:8042"
   datanode0.dev:
     build:
-#       context: ./
+       context: .
 #     context: ../containers/node
       args:
         - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
@@ -155,7 +155,7 @@ services:
     domainname: dev
   datanode1.dev:
     build:
- #     context: ./
+      context: .
 #      context: ../containers/node
       args:
         - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
