--- a/compose/multy-container.yml
+++ b/compose/multy-container.yml
@@ -13,8 +13,7 @@ services:
   
   postgres.dev:
     build:
-     context: .
-#     context: ../containers/postgres
+     context: ../containers/postgres
      args:
       - AMBARI_DDL_URL=${AMBARI_DDL_URL}
       - AMBARI_VER=${AMBARI_VER}
@@ -35,8 +34,7 @@ services:
 
   ambari-server.dev:
     build: 
-      context: .
-      #context: ../containers/ambari-server
+      context: ../containers/ambari-server
       args:
         - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
         - HDP_REPO_URL_BUILD=${HDP_REPO_URL_BUILD}
@@ -62,8 +60,7 @@ services:
      - "8080:8080"
   master.dev:
     build:
-      context: .
-#      context: ../containers/node
+      context: ../containers/node
       args:
         - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
         - HDP_REPO_URL_BUILD=${HDP_REPO_URL_BUILD}
@@ -136,8 +133,7 @@ services:
      - "8042:8042"
   datanode0.dev:
     build:
-       context: .
-#     context: ../containers/node
+      context: ../containers/node
       args:
         - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
         - HDP_REPO_URL_BUILD=${HDP_REPO_URL_BUILD}
@@ -155,8 +151,7 @@ services:
     domainname: dev
   datanode1.dev:
     build:
-      context: .
-#      context: ../containers/node
+      context: ../containers/node
       args:
         - AMBARI_REPO_URL_BUILD=${AMBARI_REPO_URL_BUILD}
         - HDP_REPO_URL_BUILD=${HDP_REPO_URL_BUILD}
